apps/architecture-portal/versioned_docs/version-1.0.35.0/operations/testing-and-proof.mdx
---
title: Testing 与 Proof
area: operations
status: implemented
owners: [core, quality]
source_paths: [docs/quality/core-test-policy.md, docs/quality/2026-08-03-formal-web-runtime-host-acceptance.md, docs/quality/2026-08-07-stage7-creator-editor-acceptance.md, docs/quality/2026-08-11-web-runtime-hardening-acceptance.md, docs/quality/2026-08-12-opfs-publication-recovery-acceptance.md, docs/quality/2026-08-12-stage7-creator-editor-review.md, docs/quality/2026-08-24-creator-capture-precommit-crop.md, docs/superpowers/plans/2026-08-09-lmdj-stage8-sample-editor.md, docs/quality/2026-08-09-stage8-sample-editor-acceptance.md, docs/release-evidence/release-intents.json, scripts/core.sh, scripts/release.sh, scripts/web-runtime-host.sh, scripts/creator-web.sh, scripts/web-toolchain-conformance.sh, scripts/ci/merge_queue.py, scripts/ci/merge_queue_watchdog.py, tests, apps/creator-web/test, .github/actions/configure-build-acceleration/action.yml, .github/actions/macos-core-gates/action.yml, .github/scripts/assert-macos-gate-result.sh, .github/workflows/ci.yml, .github/workflows/merge-queue.yml, .github/workflows/core-nightly.yml, .github/workflows/publish-release.yml, .github/workflows/deploy-web-runtime-host.yml]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 测试层级
unit/component 验证局部边界，integration/e2e 验证组合，stress 验证锁自由/并发，Proof 验证 Headless Core 交付链。
## 稳定命令
`scripts/core.sh test dev full` 运行除 stress 外的完整层级；stress 必须显式运行；`scripts/core.sh proof` 也不包含 stress。

## Version identity fixtures

验证 active repository 的测试从 `products/lmdj/version.json`、Assembly 或 generated Runtime
identity 派生当前 Product Build，并用独立 mismatch fixture 证明 consumer 不能漂移。只验证
透传、报告、状态机或错误处理的 pure behavior tests 使用命名 synthetic Product Build；它不
代表已分配或候选身份，下一次 allocation 不修改这类 fixture。历史测试与 reviewed exact
release/snapshot 记录继续保留原版本语义。

Creator Host/package conformance 以 `apps/creator-web/module.json` 为 Host SemVer 与 npm name
权威，并要求 `package.json`、`package-lock.json` 顶层及 `packages[""]` 的 version/name 全部
一致；expected npm name 由 module ID 派生。每个 drift 直接报告 expected、found、authority 与
consumer，不依赖 `npm install` 副作用，也不会自动改写 lockfile。Product Build 与 Creator
Host SemVer 是不同版本轴。

## Release 验证边界

release 授权只接受 exact-main 的 full CI 证据：target SHA 上一次 completed、successful 的 `Core CI` run（`push` 或显式 `workflow_dispatch`、head branch 为 `main`），其同一 run 内的 `Change Scope` 与 `PR Gate` 均成功，且该 run 为同一 exact SHA 保留的 scope manifest 为 `lmdj.ci-scope` 的 v2、`mode=full`、`trusted_head=true`。因为普通 merge 可能是 focused，所以当 target SHA 自身的 push 是 focused 时，操作者必须对该 exact SHA 以空 `lanes` 显式 dispatch 一次 full run 并把 run ID 写入 release intent；指定 lane 的 `requested` run 不是 full 证据。该 artifact 的保留期是 14 天：过期后只能在 run 仍被保留时重跑其全部 job（保持同一 run ID 与 SHA），或另行授权一次 exact-SHA full run 并更新 intent，证据不得推断或重建。缺失/过期为 `unverifiable`，focused、SHA 不符或 Gate 缺失/失败为 `conflict`，传输与下载故障为 `external-error`。已 published 的终态审计仍以不可变 tag/Release/asset 证据判定，不依赖会过期的 artifact。artifact 下载走认证的 Actions API，不向 302 之后的签名存储地址转发凭据，并对宿主家族、大小、ZIP 成员与 manifest schema 全部 fail closed。

发布控制面的自动化覆盖四段：`scripts/release.sh prepare TAG`、
`scripts/release.sh push-tag TAG`、`scripts/release.sh create-draft TAG` 与 dispatch-only
`publish-release.yml`。每段只证明自己的 postcondition；Draft verification、publication 和后续
deployment 不能由前一段推断。每个 mutation 前后都以
`scripts/release.sh audit --remote --tag TAG` 读取 live state；audit 报告中的 historical exception
只是显式旧事实，不是当前 gate PASS。

Publication job 在显式 dispatch 进入 exact-main-only `release` Environment 后，仍须重新验证
exact Draft；当前单人维护者模式没有 required reviewer，人工授权边界就是这次独立 dispatch。
workflow 成功也不自动触发 Runtime deployment。Runtime deployment 保持 manual-only exact-tag
dispatch，部署 evidence 与 Channel promotion 再分别验证。测试、workflow 或工具已进入仓库，
都不表示当前 Product Build `1.0.21.0` 已经 released、deployed 或 promoted。

## Integration Queue

Integration Queue 把“多个 PR 同时更新 main 后反复重跑”收敛为一个串行 integration
capacity。代码合入不等于启用：创建 `merge:queue` label 前必须先用 no-mutation dispatch
连续验证三个 probe，证明固定 concurrency group 的 `queue: max` 保留一个 running 和两个
pending，且按 GitHub 定义的等待开始时间 FIFO 执行；dispatch 还必须直接返回 numeric `workflow_run_id`。
任一事实不成立就保持 label 不存在。

启用后，具备实时 `write|maintain|admin` 权限的人给同仓库、open、非 Draft、base=`main`
的 PR 添加 `merge:queue`，就是一次可撤销的自动 squash merge 授权。Controller 只执行默认
分支上的控制代码，把 exact current main 合入 PR branch。GitHub 会把该 `GITHUB_TOKEN`
同步产生的 PR CI 置为 approval-required；Controller 只绑定 exact PR/head/bot 的唯一 run，
显式批准后把它作为 full validation，不再重复 dispatch。若 PR 已包含 current main，才显式
dispatch PR head；该路径的 ticket、PR number、base SHA、head SHA 和返回 run ID 必须完全
匹配。两条路径都要求同一 run 内 `Change Scope`、全部 full lane 与 `PR Gate` 成功后才可
merge。被测 head 自己产生 CI 证据，
因此 review 与 branch protection 仍是最终信任边界；任何 merge-authority control-plane diff
都不能由队列自动合并，必须走普通受保护合并路径。

base/head drift 只有在 artifact 分类与 live state 同时确认时才重试，最多三次；普通 CI
failure 不重试。移除 label 会在 controller 下一次读取时撤销授权，但最后一次读取与 merge
mutation 之间有不可原子化窗口，撤销后仍须检查 live PR 和 queue report。`already-merged`
是无噪音成功 no-op；其他 terminal failure 摘 label、留下稳定 code，修复后必须人工重新添加，
系统不会恢复旧授权。

GitHub 接受 squash merge 后，PR merge metadata 可能短暂落后于 main ref；Controller 在
30 秒调度预算内最多以 5 秒间隔做 7 次只读 reconciliation，并把剩余预算传给每次 REST
transport timeout。它要求 PR/main/merge SHA/tree equality 收敛，绝不重复 merge mutation；
预算耗尽后仍不一致才报告 `postcondition-mismatch`。

`queue-stalled` 的签名是：open PR 的最新 `merge:queue` event 已超过 20 分钟，但此后没有
关联的 queued/in-progress queue run。先查 workflow run、pending capacity、manual cancel 或
platform timeout，再查 controller report；scheduled watchdog 会重新核验 head、摘掉 label，
并只留一条幂等 conversation-comment marker。reconciliation 完成前不得直接重新入队。

Queue validation 只证明 exact synchronized PR head；merge 后的 focused main run 与
exact-main release evidence 始终独立。Release 仍要求 exact target main SHA 上 successful full
`Core CI`、同 run Gate 和 retained full manifest，不能从 queue、PR CI 或 squash merge 推断。

## Web Runtime Host Proof
`scripts/web-runtime-host.sh configure|build|test|proof|serve|clean` 是正式 Host 的稳定入口。`proof` 先在明确的非 clean-room 阶段运行现有 Chromium AudioWorklet conformance，再以固定 emsdk 连续执行两次 clean build，并逐字节比较两份 dist 后才运行 Python/Node/C++ Host 测试；它验证带 ownership contract 的 canonical manifest、完整生产资产清单，以及无 source/map/fixture/server/dev dependency 的精确 dist inventory。fixture generator 使用真实 native C++ compiler 对 active `realtime_engine.hpp` 常量求值，确定性再生 48 kHz mono PCM fixture；clean-room 阶段只把第二份 dist 与批准的 WAV/metadata pair 复制到 `mktemp -d`，从临时 dist 启动 proof-only server，并禁用 Playwright 的 source-tree toolchain webServer。Chromium 阶段从 Git tracked inventory 选择全部 `web_runtime_host_*.spec.mjs`，因此 source-shell lifecycle、manifest gate 与完整 packaged 创作/restart/failure journey 都属于稳定 Proof；随后单独运行 WebKit capability smoke。全程清除 `NODE_PATH`/`PYTHONPATH` 并禁用 package fetch；`clean` 只删除解析后的 `build/web/host` 子树。

Packaged Chromium 还用真实 capability Worker 覆盖 2.5 秒 delayed result 与 test-only shortened deadline：前者必须保留三项 OPFS capability 并进入 `audio-suspended`，后者必须精确报告 `HOST_TIMEOUT`，两者都验证 Worker/Blob cleanup。Issue #166 的 branch/PR proof 之外还要求一个 pinned Linux runner 在同一固定 CPU + file-I/O contention session 中连续三次完整 `scripts/web-runtime-host.sh proof` 全部通过；不得从更大样本挑选成功运行。

Chromium journey 的第一段只通过可见控件执行 `Load diagnostic project -> ready -> Activate audio -> running -> trigger`。fresh origin 首次准备必须恰好产生一次 create、一次 import、64 次 assignment 与 revision `65`；Pointer 和 Keyboard 必须各产生一个 admission 和一个 `voice_started` outcome；reload 后同一 browser-local descriptor 必须零重复 mutation、revision 不变并再次进入 `running`，且 descriptor 的三个 UUID 不得进入 DOM diagnostics。随后对 500 个 paced Trigger 保存所有 admitted sequence，排空并比较完整 outcome 集合，拒绝 missing、duplicate、unknown、`voice_capacity`、queue/Bank transition/Outcome Ring drop；Take 路径证明 20 个 capture event、stop 后第 21 个 Trigger 不进入已停止 Take、Facade commit/inspect、page/Worker restart、OPFS reopen 与重新发布。失败路径覆盖 44.1 kHz Snapshot 拒绝且旧 generation 留存、显式 suspend/recovery、竞争 writer 的 `PROJECT_BUSY`、mutation 前 protocol mismatch、精确 recovery outcome timeout、timeout 后 lease 重获与 clean close。

WebKit smoke 只有在所有 mandatory primitive 可用时才运行 protocol、OPFS、restart 与 lifecycle；否则必须输出结构化 `UNSUPPORTED_WEB_RUNTIME` limitation。当前 Playwright WebKit 缺少 `opfsSyncAccessHandle` 与 `opfsWritableReplace`，因此是明确限制记录，不是完整 PASS。
## Creator Web Proof
`scripts/creator-web.sh configure|build|test|proof|package|serve|clean` 是 Creator 的稳定入口。`test` 覆盖 UI/Runtime Session、deterministic package 与 secure server；`proof` 从真实 Core 生成包含 64 个 assigned Pad 的 portable Bundle，验证 Bundle pack 可复现性、两次 clean Creator build/package 字节一致性，再从隔离 dist 运行 Chromium 创作旅程与 WebKit capability boundary。Creator 与 Diagnostic Host 使用同一 shared native Runtime，不使用 mock Core 或 shim。

当前 source 已为 Product Build `1.0.35.0` 在实时渲染路径加入恰好 96 帧（固定 48 kHz 下 2 ms）的线性 attack/release 斜坡（F6 修复，audio-runtime `0.5.1`）。曾钉住旧阶跃行为的断言被重写为钉住新斜坡行为：attack 自触发恰好 96 帧线性升至满幅、非循环 voice 在 `end_frame` 前最后 96 帧按 cursor 位置淡出至精确 0、`stop_voice` 渲染 96 帧尾音后停用且 `stopped` 仍在停止发起时发布、循环回卷不重启 attack、releasing voice 被第二次停止立即停用且无第二次发布、短于 96 帧的 voice 让 attack 与 boundary 相乘；control_runtime 的 stop/release 生命周期断言跟随尾音语义；改动触及无锁/实时代码，stress tier（`audio.realtime_spsc_stress`、`audio.snapshot_publication_stress`）已显式运行并通过。循环接缝 crossfade 按 2026-08-24 决策暂缓，M2 第 5 检预期仍有咔哒，记录而不掩盖；M2 第 1、5 检的人工复跑在 manual-verification 台账保持 open。Product Build `1.0.34.0` 曾交付提交前输入电平门与可见输入身份（F4）；`1.0.33.0` 曾交付 `DUPLICATE_ID` 可恢复呈现；`1.0.32.0` 曾交付 trim 握把指针模型；`1.0.31.0` 曾交付 Capture 面板模态化；`1.0.30.0` 曾交付 pre-commit Crop；Product Build `1.0.29.0` 曾交付修正后的选区波形缩放；`1.0.28.0` 候选因独立审查发现 bin 漂移和重复扫描被拒绝，从未合并或发布。自动化不替代真实听感或物理设备验收，也不证明远端 CI、merge、tag、Release、部署或 Channel promotion。`provider.host_settings_invariant` 仍作为 active regression，用 pipe 同步的子进程持有 native advisory lock，证明竞争 writer fail fast，并在 owner 被终止和回收后证明下一次写入恢复成功。
Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，不新增公开产品能力。
Product Build `1.0.24.0` 曾分配 provider-sdk `1.1.2`、Application Facade `1.4.1`、Web Runtime Platform `0.3.1`、CLI `1.0.13`、MCP `1.1.10`、Native Test Host `1.0.11`、Web Runtime Host `1.2.10`、Creator Web Host `1.3.1` 与两个本地 Proof Provider `1.0.3`。那次变更是 G1/G4 缺陷修复级联：G1 在两条不会写 terminal record 的失败路径上释放 Attempt reservation，G4 为 temp sibling 名引入进程级随机 nonce。Attempt ledger harness 仍保留 orphan reservation 检查，但 G1 的两条修复路径没有自动化覆盖，因为它们只有在 `publish_attempt_outputs` 或 `persist_attempt` 真实失败时才能到达，而当前任务没有引入 fault-injection seam。

当前 packaged Creator mapping 在同一旅程中逐项验证 `Q W E R T Y U I -> Pad 1..8`、`A S D F G H J K -> Pad 9..16` 的可见地址对应，并覆盖 reload -> reopen -> explicit audio activation、16 admissions + 16 outcomes + 0 rejection + `running` 完整 tuple，以及 active `768x1024` -> `1024x768` resize 后 Project/revision/Audio/counters 连续。Node 回归还验证 channels 1–16 的 Note `36..51` mapping；restart-required case 会抑制一次真实 outcome 以触发 bounded timeout，要求旧 generation 的 Worker/transport、MIDI listener、BroadcastChannel、AudioContext 与 lifecycle listener 在 replacement 前归零。synthetic lifecycle/key repeat/MIDI is automated contract only；每项物理状态必须单独记录。

Product Build `1.0.23.0` 的 current source 新增以下 Stage 8 自动化边界：

- Authoring/Project I/O/Cooker/Facade 覆盖 `lmdj.project.v1` 只读迁移、`lmdj.project.v2` 写入、固定 64-Pad playback、WAV inspect、waveform cache、原子 streamed import、update/reset replay、失败清理与 Project/Runtime revision 分离。
- Audio Runtime 覆盖四种 trigger mode、trim/gain/mute、preview、release/stop、Voice started/stopped/completed SPSC 状态与 overflow fail-closed；44.1 kHz source admission 在 resample 后允许 240002 prepared frames，而 240001-frame 48 kHz source 仍拒绝。
- Web Runtime Platform 覆盖十二条 Sample operation、sidecar SHA/offset/final、response-first Snapshot notification、replay current truth、lifecycle safety priority，以及 Creator 每次 press 的 inspect→trigger 串行 admission。
- Creator Proof 从真实 Core 生成 Project fixture，运行 packaged Sample edit/import/preview/replace/reset/retry journey，并校验可访问性、分发隐私、可复现 package 与 WebKit capability boundary。Stage 8B Pad Capture 已在 `1.0.23.0` 交付；Product Build `1.0.30.0` 在同一 Host-local 边界增加 pre-commit Crop；Product Build `1.0.31.0` 把 Capture 面板模态化并锚定视口，journey 断言主操作与 Stop 的视口内几何；Product Build `1.0.32.0` 把 trim 手柄改为可见握把加中点划界，journey 断言握把拖动只移动对应 trim 点；Product Build `1.0.33.0` 把 `DUPLICATE_ID` 改为可恢复呈现，journey 走通 import→本地分叉→再 import→恢复并打开本地 Project 的全程无 reload 路径；Product Build `1.0.34.0` 增加提交前静音门与输入身份，假设备 journey 仍走非静音路径，静音拒绝路径无 journey 新增；Product Build `1.0.35.0` 只改变 Core 渲染路径斜坡（F6），Creator journey 无新增。`creator-capture-chromium` 与 `creator-capture-denied-chromium` 仍用假设备把关录音管线；60 秒缓冲上限只有单元测试覆盖，端到端不等待真实时长。持久化 Asset 编辑、Crop Undo、自动 silence trimming、browser-wide sample library 与其他 DSP 仍未实现、未分配版本。

`1.0.16.8` 的 Web hardening 证据继续由 `docs/quality/2026-08-11-web-runtime-hardening-acceptance.md` 保留；它不会自动升级成 `1.0.23.0` 的本地、CI 或发布结论。以下历史 conformance case 仍是 active regression：

- Chromium/Emscripten AudioWorklet case 人为保持 callback in-flight，验证首个 quiescence timeout 锁存 fatal 后，terminal wait 在第二个同长度 caller budget 内返回 `INTERNAL_ERROR`，而不是无限阻塞 Control Worker。
- Chromium real C++/Emscripten/OPFS Project I/O case 注入 `QuotaExceededError` / `InvalidStateError`，验证 `storage_condition` 分别为 `quota_exceeded` / `invalid_state`；unleased append case 在 seed lease 释放后验证类型化 `invalid_state` 且原有 `seed` 字节不变；owner-binding case 则在 platform A 持有 lease 时让 distinct same-page platform B 依次直接调用 append、replace 与 immutable create，验证三者均为 `project_busy`，已有/缺席 target 与 storage/publication intent inventory 不变，随后 A 仍可 mutation、释放并由 B 重新获取。
- Task 7 的两个 Chromium production Browser Main case 通过 `_lmdj_web_host_poll` 提交 unknown request ID 与已 settlement response 的 duplicate；它们证明 missing-pending 分支只 terminate 一次、后续 send 以 `HOST_PROTOCOL_MISMATCH` sealed、notification 不会投递且 terminal-owner release 完成，但当时没有让另一个 production request 保持 pending。Task 10A 的第三个 case 先经 native-submit seam 提交 untracked `host.status`，再在同一次 scheduled poll 前用真实 `transport.send(host.status)` 注册不同 ID；它证明该 pending promise 收到同一 terminal error并被拒绝、ID 从真实 `pendingRequests` 清除、failure callback/owner release 仍各一次且 notification 为零。完整 packaged journey 仍属于 Task 12 的 Host Proof 边界。

`1.0.16.6` 已有冻结本地证据但因 helper-only production F4 缺口成为 abandoned、unshipped candidate；`1.0.16.7` 也已冻结，但因 same-worker mutator 可复用其他 platform 的 lease 以及 production pending-rejection 证据需纠正而成为 abandoned、unshipped candidate。Task 12 已从干净、已提交的 `1.0.16.8` source boundary 完成 Project I/O Chromium/WebKit、Core Proof、ASan/TSan/stress、Diagnostic Host Proof、Creator Proof、active-tree 与 Portal 全门禁，并冻结 `1.0.16.8 · canary` immutable snapshot。它仍只证明本地自动化与快照：五项物理记录继续未验证，且不声明 push、PR、CI、merge、tag、Release、部署、发布、public smoke 或 Channel promotion。
Product Build `1.0.18.0` 的自动化候选 Proof 曾通过，但第一次人工 Canary 暴露了导入期间 Runtime Session replacement 会残留永久 `importing` UI；其步骤 1–6 结果只保留为诊断证据。`1.0.19.0` 在修复后完成 branch-local full Proof 与不可变 snapshot，但尚未完成人工十步验收；后续人工检查又发现默认键盘行与视觉 Pad 上下顺序相反。`1.0.20.0` 纠正键盘 mapping 并通过十步人工 Canary，但实体 AKAI MPD218 验证在浏览器授权后没有 Trigger；CoreMIDI 抓包确认设备在 PAD BANK A 发送 Channel 10、Note 36/51，而 Creator 只接受 Channel 1。`1.0.21.0` 移除 Creator 的额外 single-channel filter，使 bounded MIDI Note `36..51` mapping 接受 channels 1–16；该 Build 的同源候选 Proof、MPD218 实体复验、protected PR #134、squash merge `5613158`、exact-main CI 与 fresh merged-tree Proof 均已完成并分别绑定。Stage 8 的 `1.0.22.0` 候选必须在同一已提交 revision 上重新执行 Core、Diagnostic Host、Creator 与 Portal Proof；历史结果不能写成当前候选或 merged-main 证据。
## Web 分发 HTTP 门禁
proof-only server 在 bind 前运行完整 dist verifier；它以 dynamic port、新进程 PID 和一次性 nonce 的 ownership record 建立 readiness，端口已被旧进程占用时不能误判为成功。每次读取都用目录文件描述符、`O_NOFOLLOW` 和同一已 `fstat` 的文件描述符，并再次匹配启动时的资产 hash，因此符号链接、路径交换和普通文件替换均不会被服务。所有响应设置精确 COOP/COEP/CORP/CSP 与 `nosniff`，Wasm 为 `application/wasm`；仅 index/manifest 为 `no-store`，内容哈希资产为 immutable。Traversal、目录、Range 与未知路径返回 404，不支持的方法返回 405。EXIT/INT/TERM 都清理 Host 所拥有的 server PID 与临时 readiness 目录。该服务只用于本地 Proof，不是生产发布入口。
## 构建输入与依赖门禁
`scripts/verify-core-dependencies.sh` 校验 `third_party/` 下 vendored 的两个 pinned 依赖，全程离线：缺文件或哈希不符即 fail closed，并保留对 PicoSHA2 interface-library CMake 的结构断言。`cmake/LmdjDependencies.cmake` 同样只读本地副本，因此 configure 与该门禁都不在运行时依赖 `github.com` 可达性——2026-08-12 的边缘限流曾使这两处在受信池与托管 runner 上同时假红。上游 URL、版本、pinned 身份与更新流程记录在 `third_party/README.md`；vendored 字节是 pinned 输入，不是可编辑源码。
pinned emsdk 与 Playwright 浏览器由 `actions/cache` 按 pinned 修订/版本与 lockfile 哈希缓存；未命中时走原有安装步骤并回填。缓存只提供**输入**：emsdk activate 始终执行，因此生成的 `.emscripten` 不会带上他机的工作区路径；Formal Web Runtime Host 仍校验 emsdk HEAD、releases tag 与 `emcc --version`，错误或损坏的缓存会让 lane 失败而非被静默使用；两次 clean build 逐字节一致的确定性门禁不变，它持续证明产物不依赖缓存状态。GitHub 按分支隔离缓存作用域，PR 分支写入的缓存 `main` 读不到，因此加速在合并后的下一次 `main` push 才显现。
## CI 责任
主 CI 对每个 PR 运行 `Change Scope`：以完整 Git 历史验证精确 base/head 差异，并读取实时 Draft 与 `ci:full` 标签。分类结果写入 job summary，列出完整 status/path inventory 与每个 selected lane 的具体规则/升级理由，同时以同一次 run 可安全覆盖的方式保留 `ci-scope-<head-sha>` manifest artifact。Draft 只选择 Docs/static 与 CI Contract；转为 Ready 会对同一 head 重新分类并产生正式结果。Ready PR 按版本化路径归属取所有消费者 lane 的并集；中央 CI、未知归属、跨多个昂贵家族或 `ci:full` 升级为全量。`main` push 与 Ready PR 使用同一套路径归属：docs-only merge 只跑 focused lane，而 Product Assembly、Contract、中央 CI 控制面、未知归属与跨三个昂贵家族的 merge 仍升级为全量。push 的 base 来自 `github.event.before` 这一事件字段而非解析出的 PR base，因此零值、缺失、非 commit、非 head 祖先或任何不完整的 inventory 都记为 `unverifiable push base`：manifest 以 full 模式发布该具体理由且不带任何 changed-file，绝不猜测路径归属。`main` run 仍按 SHA 分组、不取消较早的 `main` run。focused main 只是 CI 成本决策，不是 release 决策：release 授权需要的是对 exact SHA 的 full 证据，见下节。手动 dispatch 默认同样选择全部 14 个 lane；可选的 `lanes` 输入接受逗号分隔的 lane 名，使该次 run 只执行被指定的 lane 与其 required job，manifest 记为 `requested` 模式并写明 lane 是被指定而非推导。未知或空的 lane 名、以及在 dispatch 之外的事件上指定 lane，都 fail closed。`requested` 不复用 `focused`：`focused` 断言其 lane 等于路径归属并集，而 dispatch 选择刻意独立于 diff，复用会为所有 Ready PR 弱化该不变量。`PR Gate` 裁决 lane 结果、不读取 mode。

正式 lane 包含 Docs/static、Architecture Portal、CI Contract、Ubuntu Core、Linux ASan、Coverage、macOS Core/native ASan、Web Toolchain、Formal Web Runtime Host、Creator、Web Runtime Lab、Deploy Contract、Chameleon Lab 与 Core Package。Linux ASan 负责 Python-hosted sanitizer 覆盖，macOS ASan 只覆盖 native label；stress 仍随对应 Core ASan 门禁执行，Nightly 继续保留 TSan 与重复 Stress lane。Formal Web Host 继续校验固定 emsdk revision/release mapping/`emcc 6.0.5`、locked npm、Chromium/WebKit 与 `scripts/web-runtime-host.sh proof`。

测试归属跟随被测对象，而不只是测试文件所在目录。`apps/web-runtime-host/test/deploy_command_test.py` 会对着 fake Netlify server 端到端执行 `scripts/web-runtime-deploy.sh`，因此 scope policy 在既有 `apps/web-runtime-host/` 前缀归属之外，另把该套件与它驱动的 `deploy_orchestrator.py`、`netlify_api.py`、`release_bundle.py` 三个工具映射到 `deploy_contract`。在此之前修改 deploy 命令只选中 `deploy_contract`，却从不运行证明该命令的套件——这是保守测试继承策略内部的 fail-open 缺口。现在 Deploy Contract lane 运行该套件，`scripts/web-runtime-host.sh` 的 `run_nonbrowser_tests` 不再运行它，因此 Formal Web Runtime Host proof 的非浏览器阶段不再包含它；其余六个非浏览器套件的被测对象仍归 `web_runtime_host`，保持不变。union 语义无法减去 lane，该套件与三个工具仍会通过目录前缀继续选中 `web_runtime_host`；这种过度选择是 fail-closed 方向，属于接受范围。

该套件在 Deploy Contract lane 中以 `--shards N` 分片进程并行运行：默认 `min(4, os.cpu_count())`，可用 `LMDJ_DEPLOY_COMMAND_TEST_SHARDS` 覆盖，`--shards 1` 就是原来的串行行为。它可以分片而 Playwright 浏览器套件仍保持 `workers: 1`，是因为每个用例自建临时仓库、fake command 目录与端口 0 的 fake Netlify server，`tearDown` 只读取真实 evidence root，没有共享的时序敏感状态。runner 对发现到的 test id 做确定性划分，逐个打印失败 worker 的完整输出，并在实际执行集合与发现集合不一致时 fail closed——静默丢测是失败，不是更快的通过。唯一的例外是两个 SIGINT/SIGTERM 用例：它们把 deploy 命令推进到阻塞点后向进程组发信号，再对有界的 readiness 与信号后清理窗口断言，是本文件中仅有的带 wall-clock 预算的测试，因此在并行阶段之后单独串行运行；runner 显式记录这两个 id，若测试改名则直接拒绝启动，避免它们被静默放回并行阶段。放宽时序预算换并行会削弱断言，给这两个用例一台空闲机器不会。

Portal 不再独立触发 PR 或 `main` workflow；主 CI 在同一次 run 内调用 reusable Portal，并显式传入 documentation-impact 开关、base/head 与 PR body。`PR Gate` 静态 fan-in 15 个 lane job 加 `select-macos-runner`、`macos-primary` 共 17 个结果：manifest 选中的结果必须是 `success`，未选中的必须是 `skipped`，缺失、额外、失败、取消、exact base/head SHA、mode/lane、changed-file schema 或 lane/job 映射不一致都 fail closed。`Change Scope` 是 manifest producer，不是结果键，但 producer job 本身仍必须为 `success`，因此 manifest output 已产生但后置 artifact 上传失败也不能通过；条件性 `macos-fallback` 由 `core (macos-latest)` 与 `core-asan-macos` 两个 adjudicator 传递裁决。

`Change Scope`、`PR Gate` 与仅存的 `select-macos-runner` 明确保留在 GitHub-hosted `ubuntu-24.04`：Change Scope 必须在所有自建 Linux runner 离线时仍发布精确 diff、scope、trust 与升级理由，PR Gate 也不应受它所裁决的 workload 主机权限影响。这三个是"把 Linux 工作交给受信主机"这一原则唯一的显式豁免，它们的 minutes 记为 hosted control plane，而不是 routine self-hosted workload；两个 macOS adjudicator 同样运行在 `ubuntu-24.04`，但它们只是以对外 check name 复述已经产生的结果，本身不执行任何 workload。

scope manifest schema 现为 `lmdj.ci-scope` 的 v2——这是仓库内部的 CI schema 迁移，不是 active Contract，因此不参与 Contract SemVer。v2 只新增一个闭合布尔字段 `trusted_head`，`Change Scope` 同时发布 job output `trusted-head`。trust 只由 event 推导——非 `pull_request` 事件，或 head repository 等于 `github.repository` 的 Pull Request；绝不从 PR 标题、label、改动路径或被测代码推导，因为 fork 控制这些内容。producer、Gate 与契约测试在同一个 commit 原子迁移到 v2，混合版本 fail closed。

`scripts/ci/scope_policy.json` 声明闭合的 `self_hosted_jobs`：13 个允许由自建角色执行的正式 job（Docs/static、Portal、CI Contract、Ubuntu Core、Linux ASan、Coverage、四条 Web lane、Deploy Contract、Chameleon Lab、Package）。它们的 `if` 都要求 `needs.change-scope.outputs.trusted-head == 'true'`，且这 13 个 job 现已全部按角色标签路由，因此仓库设置或路由的意外改动会 fail closed 而不是转向付费 runner。`PR Gate` 在读取任何 job 结果之前先校验 `trusted_head`：untrusted head 选中该集合中任一 job 时，直接以 `untrusted fork blocked from self-hosted CI` 判定失败，而被跳过的 selected job 仍按原有真值表另行报错。仓库级 private-fork workflow 禁止执行仍是主边界（fork 可以改自己的 workflow 文件），manifest 字段是纵深防御。外部 fork 若需要正式 merge 证据，由 maintainer 把 exact patch 带到受信的同仓库分支，在新 SHA 上重新建立 CI，不能继承 fork run。

`select-ubuntu-runner` 已被删除：Ubuntu Core、Linux ASan、Coverage 与 Package 是它最后的消费者，它们改按 `ci-core` 角色路由后，该 job 连同其结果键、Runner API 探测与 Linux 侧 `SELF_HOSTED_RUNNER_READ_TOKEN` 用法一并移除，因此没有任何常规 Linux workload 能再自动购买 GitHub-hosted 容量。Package 仍保留 LFS hydration 并明确禁用 ccache。只有 `core_macos` 被选中时才运行仅存的 macOS selector，其行为不在本次迁移范围内。

busy 与 absent 的区分现在完全是平台行为，不再是 workflow 逻辑：GitHub 本来就会让 label 匹配的 job 在满载角色上排队，因此 busy 是延迟条件；角色离线或不存在则是可用性条件，job 保持排队直到 GitHub 在 24 小时排队上限处取消它，终态是一次 cancelled run 加一条 runner 可用性告警，而不是无限等待，也不是一张静默账单。此前 selector 对整个 run 只解析一次，把两者等同处理会让并发 run 偶然占满池的瞬间把整份 manifest 转到付费基础设施——这正是 2026-08-12 运行历史中的主要成本来源；该 job 现已删除，这条路径不复存在。并发度按角色计算，等于携带该角色的在线 runner service 数量，其余排队。两台主机现均已运行已批准的两个 service，因此 `ci-general` 在两台主机上合计四个并发槽位，`ci-web-heavy` 在 netcup 上两个，`ci-core` 在与 staging 共享的 Contabo 主机上两个；提高该数量是既有主机上的运维改动，不是 workflow 改动。每台两个取的是有界值而非最大值，是因为每次 CI CMake build 已限制为 3 路并行，主机上的 service 数量会与之相乘：每台两个即最多 6 个并发编译进程，主机可以吸收；三个则是 9 个，会拖慢该机器上的每个 job。`web-runtime-host` 曾是最受该争用影响的 lane——共享池上约 40 分钟，GitHub-hosted 上 16–19 分钟——无论池提供多少槽位，它都决定该池的关键路径；专用 `ci-web-heavy` 角色正是为这条 lane 建立的容量，它现已改由该角色执行，不再参与共享池的争用。其 job 上限仍保持按慢机校准的 75 分钟，而非按 hosted 速度的 45 分钟：上限是 hang 检测而非性能预算，在 netcup 角色给出这条 lane 自己的时长证据之前不收紧。

Linux CI 现按角色标签路由，取代共享的 `contabo` 来源标签：兼跑 LMDJ staging 的 Contabo Singapore 主机标记 `shared-with-staging`，承担 `ci-general` 与 `ci-core` 角色，其 CI slice 至少为应用与 OS 保留约 2 vCPU 与 8 GiB；仅用于 CI 的 netcup 节点标记 `ci-only-host`，承担 `ci-general` 与 `ci-web-heavy` 角色，两个 runner service、合计约 14 vCore 与 48 GB，为 OS 与缓存维护保留其余资源。`ci-web-heavy` 角色已就绪，Web Toolchain、Creator、Formal Web Runtime Host 与 Web Runtime Lab 四条 Web lane 现已全部切换过去：它们各自以字面标签集合 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`lmdj-linux-pool`、`ci-web-heavy` 直接路由，不经过 `select-ubuntu-runner`，因此角色满载或缺失时排队而不转向付费 runner，其 trust 条件仍由 job 自身携带而非来自 selector 的 fork 分支。经由共享 `web-ci-proof` 的三条 lane 的 `install-system-deps` 同时改为 `false`：系统依赖随角色预置，Playwright 不应在每次运行时把它们写进两个 runner service 共享的机器状态；Web Runtime Lab 从未共用这套 emsdk/Playwright setup contract，仍直接执行 `scripts/web-runtime-lab.sh test`，没有该输入，也不因换机而被并入重负载路径。Formal Web Runtime Host 与 Web Runtime Lab 是两条此前经由 selector 路由的切换 lane，因此它们同时从 selector 的 lane 条件与 `scope_policy.json` 的 `lane_jobs` 支持集合中移除：selector 不再为一条不读取其输出的 lane 启动，PR Gate 也不再要求一个该 lane 永远不会消费的 support job 成功。Web Runtime Lab 切换后 selector 已不再有任何 Web 消费者，其后 Ubuntu Core、Linux ASan、Coverage 与 Package 也一并迁出，该 selector 随之删除。Web 侧的切换按 lane 逐条进行，每条都要有自己的真实运行证据，未经审阅的新增路由属于拓扑改动。

`ci-general` 角色现同时承担五个通用 Linux job：Docs/static、Architecture Portal、CI Contract、Deploy Contract 与 Chameleon Lab，各自以字面标签集合 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`lmdj-linux-pool`、`ci-general` 直接路由，角色满载或缺失时排队而不转向付费 runner。这五个 job 短小、廉价且不共享任何 toolchain contract，因此审阅单位是整组而非逐条 lane；它们各自保留原有的 proof 步骤，切换只改变执行位置。Architecture Portal 是其中唯一以 reusable workflow 运行的 lane：GitHub 不允许 `uses:` job 声明 `runs-on`，因此角色写在被调用的 `architecture-portal.yml` 的 job 上，caller 只保留 lane 条件与 trust 条件；该 workflow 只有 `workflow_call` 触发器且只有这一个 caller，所以角色写在那里不会波及其他路径。

`ci-core` 角色承担四个原生 Core job：Ubuntu Core、Linux ASan、Coverage 与 Core Package，各自以字面标签集合 `self-hosted`、`Linux`、`X64`、`lmdj-linux`、`lmdj-linux-pool`、`ci-core` 直接路由。该角色刻意不跨两台主机：持久原生 `ccache` 与预装的 clang-18/llvm-18 覆盖率工具链是共享主机上的机器状态，不是池状态。因此三条原生 Core lane 的 `use-ccache` 不再取决于 selector 输出而恒为 `true`，ccache 统计步骤也变为无条件；Coverage 则删除了 `apt-get install clang-18 llvm-18` 这一步——它只为 hosted fallback 存在，保留下来只会在两个 runner service 共享的机器状态上反复写入。Package 依旧禁用 ccache。

由此形成两层路由。Hosted control plane：Change Scope、PR Gate 与仅存的 macOS selector 固定在 `ubuntu-24.04`——Change Scope 决定跑什么以及 head 是否受信，PR Gate 决定该 run 是否通过，自建侧故障不能连带击穿它们所裁决的 scope 与 trust 证据；macOS selector 的行为不在本次迁移范围内，保持不变。自建 workload：四条 Web lane、五个通用 job 与四个原生 Core job 全部按角色寻址，字面标签没有 fallback 分支，因此 trust 条件必须由 job 自身携带。至此没有任何常规 Linux workload 会自动落到 GitHub-hosted 上。契约测试同时固定 `ci-web-heavy`、`ci-general` 与 `ci-core` 的精确 job 集合，断言 control plane 不携带任何角色标签，并断言 `select-ubuntu-runner`、其结果键、Runner API 探测与 Linux 侧 token 用法在 workflow 中全部缺席。

CI 不再依赖 Docker：CI-only 主机没有 daemon，共享主机的 runner 用户也不在 `docker` group，CI 因此永远无法触及运行生产的 socket。CI Contract lane 相应改用按 SHA256 校验的 actionlint release 归档而非 container action，版本不变；digest 指定的是确切字节，而它取代的 Docker tag 只指定版本。

匹配池满载时仍然只排队，不转向付费 runner。若始终没有匹配的 runner 上线，job 保持 queued，并在 GitHub 的 24 小时排队上限后被自动取消——终态是 cancelled 与 runner 可用性告警，而不是无限等待，也不是静默账单。

runner 证据始终分开报告：注册与 online 不等于被选中，被选中不等于成功。真实 `runner_name`、排队秒数、执行秒数、计费 worker time 与 run wall-clock 各自单独记录，任何一项都不能替代另一项。

Web Runtime Lab 是第四条、也是最后一条切换到专用 CI-only 角色的 Web lane。它与前三条不同：它不使用共享的 `web-ci-proof` composite action，而是一条短而稳定的 Node/Python 套件，不在主机上安装任何东西，因此切换只改变执行位置——checkout、Python 3.11、Node 22 与 `scripts/web-runtime-lab.sh test` 的步骤序列不变，也不继承 `web-runtime-host` 那条为量级完全不同的 lane 设置的 75 分钟 hang 检测上限。Formal Web Runtime Host 是继 Web Toolchain 与 Creator 之后第三条切换的 lane，也是这套专用容量最初要解决的对象；它的 Emscripten 身份校验、LFS fixture 补水与 proof 步骤都未改动，只有执行位置改变，因此角色上的持久 toolchain 也无法绕过固定编译器身份检查。Creator lane 是继 Web Toolchain 之后第二条切换的 lane。它此前明确留在 GitHub-hosted Ubuntu：完整 Wasm/OPFS fault matrix 时序敏感，曾在异构共享自建池上超出限定测试预算。那是确定性决策而非容量决策，因此增加 runner 槽位或 toolchain 缓存至今都不构成迁移理由；真正成立的是另一条论据——专用 CI-only 角色消除的是异构本身，且只对已用真实运行证据逐条验证过的 lane 成立，Web Toolchain 先切换并给出证据，Creator 随后按同一方式验证。契约测试现固定其角色路由、trust 条件与 lane 输入，同时保留这段时序敏感的历史理由，避免后续成本或确定性回顾把该迁移误读成容量决策或原样退回。Package 现在完全不经由 hosted 执行，因为已没有 fallback 可走。所有 CI CMake build 均限制为 3 路并行。Linux 原生任务无条件共享 `ci-core` 主机上 checkout 外的持久 `ccache`，Emscripten 与 Package 明确绕过；M1 原生任务使用本机持久 `ccache`，GitHub-hosted macOS fallback lane 不依赖 runner 本地缓存。

macOS Core Proof 与 native ASan 继续优先带 `lmdj` 标签且在线的受信 self-hosted runner。外部 fork、状态密钥缺失、Runner API 失败、机器离线/缺失/标签不符时直接选择 GitHub-hosted macOS；busy 则排队，理由与 Linux 池相同且分量更重——GitHub-hosted macOS 单价是 Linux 的 10.3 倍，在 2026-08-01..13 的 Actions 支出中以 11% 的分钟数占了 57% 的金额。离线仍按可用性条件处理：单台笔记本 runner 睡眠时若排队，会让 Pull Request 悬挂而不只是延迟。self-hosted lane 只有在 checkout、加速/`ccache` setup、通信中断或 30 分钟上限导致未发布终态时，才执行一次 GitHub-hosted fallback；加速 setup 成功后已发布的准备、Proof 或 sanitizer 失败是最终语义结果，不触发 fallback。对外 check name 仍为 `core (macos-latest)` 与 `core-asan-macos`。

Change Scope 和全部 selected lane/support job 的排队与执行时长，以及从 Change Scope 创建到最晚 selected job 完成的 pre-Gate critical-path span，会作为 evidence 写入 summary；排队单独记录，只有执行时长在 policy 已定义 execution SLO 时参与比较，未定义时明确显示 `SLO not defined`。macOS selector 不继承消费者 lane SLO，`macos-primary` 使用 `core_macos` SLO；timing 缺失仍不阻断。SLO 只用于观察和容量决策，不把慢但成功的 job 改为失败。独立 job 安全上限和测试自己的行为 timeout 仍是硬失败。编译、Proof、测试、sanitizer 与 Coverage 不自动 retry；缓存统计也只作诊断证据。工作流定义与本地结果都不是远端执行结果，实际 Pull Request URL、同 SHA manifest、formal results 和 `PR Gate` 状态只能在 CI 产生后记录。

Hosted 用量是预算目标，不是未经验证的保证。观察周必须按 PR updates 与 merges 归一化，把 routine hosted minutes 与旧的无条件 PR/main 矩阵基线对比，分开记录 focused 节省、新增控制/full-main 工作与 Package fallback。Routine hosted minutes 不得持续高于可比基线；任何持续回退都先修正路由或合并 job，无法在不削弱证据的前提下修正时回滚永久迁移，不用增加预算或 retry 掩盖。

本地 Mac 可以在 push 前承担额外的 focused、Proof 或浏览器预检，但这些结果不替代绑定具体 commit 的 GitHub required checks。

`scripts/local-ci.sh` 是该预检的稳定入口：它直接调用 `scripts/ci/change_scope.py` 与 `scripts/ci/scope_policy.json`，因此 lane 选择就是 workflow 的选择，而不是第二套判断；契约测试断言命令表恰好覆盖全部 14 个 canonical lane。lane 的四种结论是 `pass`、`cached-pass`、`fail` 与 `not-runnable-here`：平台、toolchain 或工作树前置条件不满足的 lane 必须报告 `not-runnable-here`，绝不报告 `pass`，macOS 上的 Linux-only Core lane 与工作树被修改时的 `package` 是常规情形。缓存结论以 lane 名、已解析命令与该 lane 所有输入路径的内容标识做摘要；升级为 full 的路径——共享 CMake、Contract、中央 CI 控制面与任何未分类路径——是每条 lane 的输入，因此共享改动不会留下过期的 cached pass。每条 lane 保留有限个最近通过状态，撤回一次编辑即可回到已证明的状态而无需重跑。缓存位于工作树之外的 `~/.cache/lmdj/preflight/`，没有任何路径进入 CI 结果。命令表按 lane 记录预检刻意不复现的 CI 步骤：toolchain provisioning、`actionlint` 与 LFS fixture rehydration。Portal impact check 读取的 PR body 不再属于该清单：`scripts/local-ci.sh --pr-body FILE` 以 CI 同一个 `check-doc-impact.mjs` 校验文档影响声明，因此格式错误在毫秒级暴露，而不是等一次完整 portal lane。该检查不进入 lane、也不进入缓存——PR body 不是仓库内容，一旦参与内容寻址缓存就会为已变更的正文伪造 cached pass；改动不选中 `portal` lane 时它报告第五种结论 `not-applicable` 而非 `pass`，因为那正是 CI 也不作判定的情形，本地 `--lanes` 限制只收窄本机执行范围、不改变 CI 的 lane 选择。预检不发布 job result、不参与任何 `needs` 图、不能满足 manifest 要求的 job；`PR Gate` 仍是唯一的聚合裁决，本地通过不授权 push、Pull Request、merge 或任何后续状态转移。
## 证据分离
本地通过、clean-room Proof、CI 绿色、正式 tag、Channel promotion、门户快照和物理设备验收分别报告。Product Build `1.0.21.0` 的 protected PR run `31684663825`、squash merge `5613158`、exact-main run `31688172806` 与 fresh merged-tree local Proof 已分别绑定；Product Build `1.0.22.0` 的 Core、Web Toolchain、Diagnostic Host 与 Creator Proof 必须绑定同一可审计 revision，并且不继承历史 Build 的 PR、CI 或 merge 结论。匹配 Build 的快照 provenance 由 Portal 门禁单独判定，不由 Host Proof 推断。物理记录分别是：macOS Safari Pointer `deferred / unverified`、macOS Chrome Pointer `deferred / unverified`、macOS Chrome Physical MIDI `passed on 1.0.21.0`、iPadOS Safari Touch `deferred / unverified`、iPadOS Safari lifecycle `deferred / unverified`。Safari Bundle import 的单独人工观察不升级 Pointer 行，MPD218 通过也不升级其他物理行。
## 门户责任
页面状态必须链接实际测试/Proof，并明确自动化无法证明的体验范围。
